adds navigation on home screen

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,11 +6,11 @@
     "claims": "Claims",
     "profile": "Profile",
     "dashboard": "Dashboard",
-    "safes": "Safes",
+    "wallets": "Wallets",
     "account": "Account",
-    "createSafe": "Create Safe",
+    "createWallet": "Create Wallet",
     "genericNotes": "Generic Notes",
-    "safeRole": "Safe Role",
+    "walletRole": "Wallet Role",
     "creator": "Creator",
     "safiens": "Safiens",
     "or": "OR",
