#05 Create a landing page (#21)
* adds landing page

* code refactors and adressed all review comments

* adds new logo

* fixes home-screen and landing page width overflow issues

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -45,5 +45,9 @@
     "inAppNotifications": "In app notifications",
     "emailNotifications": "Email notifications",
     "defaultSafeConfigs": "Default safe configs"
+  },
+  "welcomePage": {
+    "heading": "Non custodial claimable wallets",
+    "subHeading": "A crypto wallet solution for easy self recovery and inheritance"
   }
 }
