#06 -Create wallet Overview Screen (#24)
* adds overview screen

* fixes activity line break issue

* replaced heading colors and added margin to shimmer component

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -37,7 +37,7 @@
   "wallet": {
     "enterDetails": "Enter Wallet Deatils"
   },
-  
+
   "accountPage": {
     "profile": "Profile",
     "settings": "Settings",
@@ -49,5 +49,12 @@
   "welcomePage": {
     "heading": "Non custodial claimable wallets",
     "subHeading": "A crypto wallet solution for easy self recovery and inheritance"
+  },
+  "walletOverViewPage": {
+    "copiedSuccessfully": "Copied Successfully",
+    "send": "Send",
+    "recieve": "Recieve",
+    "trade": "Trade",
+    "activities": "Activities"
   }
 }
