adds clain-screen

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -56,5 +56,8 @@
     "recieve": "Recieve",
     "trade": "Trade",
     "activities": "Activities"
+  },
+  "walletClaimPage": {
+    "totalValue": "Total Value"
   }
 }
