--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -58,6 +58,11 @@
     "activities": "Activities"
   },
   "walletClaimPage": {
-    "totalValue": "Total Value"
+    "totalValue": "Total Value",
+    "claim": "Claim",
+    "notAccessable": "Wallet is not yet accessible",
+    "walletRecoversIn": "Wallet recovers in",
+    "walletRecovered": "Wallet recovered",
+    "view": "View"
   }
 }
