#08 - Create Claim-status screen (#28)
* adds claim screen

* adds clain-screen

* adds localization

* splits status component and adressed all review comments

* removed all unwanted comments

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -57,5 +57,13 @@
     "recieve": "Recieve",
     "trade": "Trade",
     "activities": "Activities"
+  },
+  "walletClaimPage": {
+    "totalValue": "Total Value",
+    "claim": "Claim",
+    "notAccessable": "Wallet is not yet accessible",
+    "walletRecoversIn": "Wallet recovers in",
+    "walletRecovered": "Wallet recovered",
+    "view": "View"
   }
 }
