integrates claim wallet and updates core-js version

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -64,6 +64,7 @@
     "notAccessable": "Wallet is not yet accessible",
     "walletRecoversIn": "Wallet recovers in",
     "walletRecovered": "Wallet recovered",
+    "claiming": "Claiming Wallet",
     "view": "View"
   }
 }
