adds notification page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -58,6 +58,18 @@
     "trade": "Trade",
     "activities": "Activities"
   },
+  "walletSettingsPage": {
+    "settings": "Settings",
+    "walletName": "Wallet Name",
+    "addBeneficiary": "Add a beneficiary",
+    "advancedOptions": "Advanced options",
+    "signalingPeriod": "Signaling Period",
+    "placeHolders": {
+      "walletName": "A test Wallet",
+      "addBeneficiary": "johndoe@safient.io",
+      "signalingTime": "10 days"
+    }
+  },
   "walletClaimPage": {
     "totalValue": "Total Value",
     "claim": "Claim",
@@ -66,5 +78,10 @@
     "walletRecovered": "Wallet recovered",
     "claiming": "Claiming Wallet",
     "view": "View"
+  },
+  "notifications": {
+    "notification": "Notifications",
+    "cancelClaim": "Cancel Claim",
+    "claimingText": "Someone is claiming your wallet"
   }
 }
