adds empty state component

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -66,5 +66,8 @@
     "walletRecovered": "Wallet recovered",
     "claiming": "Claiming Wallet",
     "view": "View"
+  },
+  "emptyStates": {
+    "emptyActivities": "No Activities yet"
   }
 }
