adds empty state component (#40)

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -79,6 +79,10 @@
     "claiming": "Claiming Wallet",
     "view": "View"
   },
+  "emptyStates": {
+    "emptyActivities": "No Activities yet"
+  },
+
   "notifications": {
     "notification": "Notifications",
     "cancelClaim": "Cancel Claim",
