removed darkmode option and minor code refactors

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -89,8 +89,7 @@
     "claimingText": "Someone is claiming your wallet"
   },
   "menuComponent": {
-    "settings": "Settings",
-    "darkMode": "Dark Mode",
+    "profile": "Profile",
     "logout": "Logout"
   }
 }
