#32 - Create a Menu Component (#44)
* adds menu dropdown

* removes inline styling

* code cleanup and adds localization

* removed darkmode option and minor code refactors

* fixes menu modal

Co-authored-by: Koshik Raj <koshik.raj@gmail.com>

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -87,5 +87,9 @@
     "notification": "Notifications",
     "cancelClaim": "Cancel Claim",
     "claimingText": "Someone is claiming your wallet"
+  },
+  "menuComponent": {
+    "profile": "Profile",
+    "logout": "Logout"
   }
 }
