--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -35,7 +35,7 @@
     "registerAlert": "We couldn't find your account. Please register here"
   },
   "wallet": {
-    "enterDetails": "Enter Wallet Deatils",
+    "enterDetails": "Enter Wallet Details",
     "creatingLabel": "Creating Wallet ..."
   },
 
@@ -54,7 +54,7 @@
   "walletOverViewPage": {
     "copiedSuccessfully": "Copied Successfully",
     "send": "Send",
-    "recieve": "Recieve",
+    "recieve": "Receive",
     "trade": "Trade",
     "activities": "Activities"
   },
@@ -75,7 +75,7 @@
     "claim": "Claim",
     "notAccessable": "Wallet is not yet accessible",
     "walletRecoversIn": "Wallet recovers in",
-    "walletRecovered": "Wallet recovered",
+    "walletRecovered": "Congratulations! You have access to the wallet.",
     "claiming": "Claiming Wallet",
     "view": "View",
     "claimConfirm": "This action will initiate the wallet claim by paying the claim fee. Are you sure about this?"
