fixes claim flow

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -37,7 +37,7 @@
   },
   "wallet": {
     "enterDetails": "Enter Wallet Details",
-    "creatingLabel": "Creating Wallet ..."
+    "creatingLabel": "Setting up your wallet"
   },
 
   "accountPage": {
