#92 - Wallet flow fixes and core-js updates (#95)
* adds create-voucher screens

* adds create-voucher screens

* updates services to incorporate core-js API changes

* made benieficiary optinal and moved to advanced section

* made benieficiary optinal and moved to advanced section

* updates services to make beneficiary/ claim method optional

* adds form validations and minor css fixes

* adds progress status

* adds progress status

* adds progress status and moved the claim notice outside

* fixes claim flow

* adds custom error mapper

* updates wallet service for core-js API changes

* fixes typo

---------

Co-authored-by: Koshik Raj <koshik.raj@gmail.com>

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -30,14 +30,14 @@
     "getStarted": "Get Started",
     "login": "Log In",
     "create": "Create",
-    "createAccount": "Create an Account",
+    "createAccount": "Welcome to Safient Wallet 👋",
     "terms": "Terms of Use",
     "privacy": "Privacy Policy",
-    "registerAlert": "We couldn't find your account. Please register here"
+    "registerAlert": "Looks like you are new here . Please provide these optional info so that you get the best experience 🤝"
   },
   "wallet": {
     "enterDetails": "Enter Wallet Details",
-    "creatingLabel": "Creating Wallet ..."
+    "creatingLabel": "Setting up your wallet"
   },
 
   "accountPage": {
